custom spring boot starter

--- a/room-web-app/src/main/resources/application.properties
+++ b/room-web-app/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.jpa.hibernate.ddl-auto=none
-logging.level.org.springframework.web: TRACE
+#logging.level.org.springframework.web: TRACE
+landon.logging.logger.name=LinkedInLearning-Landon
