--- a/room-web-app/pom.xml
+++ b/room-web-app/pom.xml
@@ -64,6 +64,12 @@
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.frankmoley.boot.landon</groupId>
+			<artifactId>logging-spring-boot-starter</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
